blocks/form/form.css
/* ... */
main .form input[type="radio"]:checked,
main .form .field-wrapper.field-valid input[type="radio"],
main .form .field-wrapper.field-invalid input[type="radio"] {
    outline: none;
    border-radius: 36px;
    border: 1.5px solid var(--color-primary-1);
    box-shadow: 0 0 0 0.5px var(--color-primary-1);
}

main .file-wrapper.decorated input[type="file"] {
    display: none;
}

main .file-wrapper .field-dropregion {
    background: rgb(0 0 0 / 2%);
    border: 1px dashed var(--form-input-border-color);
    border-radius: 4px;
    margin: 11px 0 8px;
    padding: 32px;
    text-align: center;
}

main .form form .item-remove {
    padding: 0;
    background: var(--color-white);
    padding-left: 10px;
}

main .form form .item-add {
    overflow: unset;
    display: flex;
    justify-content: center;
}

main .form .file-description{
  display: flex;
  gap: 20px;
  align-items: center;
  margin-top: 5px;
}

main .form .file-description .file-description-name {
  cursor: pointer;
  text-decoration: underline;
  flex: 1;
}

main .form form .item-remove span {
    display: block;
    width: 20px;
    height: 20px;
    background: url('../../icons/delete.svg') no-repeat;
}

main .file-wrapper .file-description button {
    --form-button-padding: 15px;

    width: 12px;
    height: 12px;
    border: none;
    text-align: center;
    background: var(--form-styles-border-color);
    cursor: pointer;
    position: relative;
    border-radius: 3px;
}

main .file-wrapper .file-description button::after{
    content: 'X';
    position: absolute;
    top: 50%;
    left: 50%;
    color: var(--form-styles-background-color-primary);
    transform: translate(-50%, -50%);
}

main .form .button-wrapper button {
    cursor:pointer;
    border-radius: 100px;
}

main .form .button-wrapper button:hover {
    background: var(--color-white);
    color: var(--form-button-background-color);
    border: 2px solid var(--form-button-background-color);
}

main .form .button-wrapper.wizard-button-next button, main .form .button-wrapper.submit-wrapper button{
    background-color: var(--color-secondary-4);
    border: none;
    outline: 1px solid var(--color-bg-secondary);
    color: var(--color-text-primary);
    margin-left: auto;
}

main .form .button-wrapper button[disabled], main .form .button-wrapper.wizard-button-next button:disabled {
    cursor: not-allowed;
    border: none;
    outline: none;
    color: var(--form-styles-button-disable-color);
    background-color: var(--color-disabled);
}

main .form .button-wrapper.wizard-button-next button:hover, main .form .button-wrapper.submit-wrapper button:hover{
  outline-width: 3px;
}

main .form .button-wrapper.wizard-button-next button:focus, main .form .button-wrapper.submit-wrapper button:focus{
  outline: 3px solid var(--color-bg-tertiary);
  outline-offset: 3px;
  border: 3px solid var(--color-bg-secondary);
}

/** Wizard Styling */
main .form form .wizard  {
  display: grid;
  counter-reset: wizard-step-counter;
  grid-template-columns: minmax(0, 1fr);
  border: var(--form-wizard-border) solid var(--form-wizard-border-color);
  background-color: var( --form-wizard-background-color);
  gap: unset;
  padding: 20px var(--form-wizard-padding);
}

main .form form .wizard > legend{
    float: left;
    width: 100%;
}

main .form form .wizard > .field-description{
  width: 100%;
}

main .form form .wizard > fieldset > legend{
    display: none;
}

main .form form .wizard > fieldset:not(.current-wizard-step){
    display: none;
}

main .form form .wizard .wizard-button-wrapper{
    display: flex;
    justify-content: end;
    gap: 50px;
    width: 100%;
    grid-column: span 12;
}

main .get-a-quote-form-alternate form > .field-wrapper {
    padding-right: 0.5rem;
    padding-left: 0.5rem;
}

main .form form .wizard .wizard-button-wrapper .field-wrapper{
    flex: unset;
}

.wizard-menu-items{
    display: flex;
    gap: 50px;
    flex-wrap: wrap;
    list-style: none;
    padding: 0;
    margin: 0 0.5rem 1rem;
    font-weight: var(--form-fieldset-legend-font-weight);
    font-size: var(--form-fieldset-legend-font-size);
    color: var(--form-fieldset-legend-color);
    padding-bottom: var(--form-wizard-padding);
    grid-column: span 12;
}

main .form form .wizard .wizard-menu-item {
  counter-increment: wizard-step-counter;
}

main .form form .wizard .wizard-menu-item::before {
  content: counter(wizard-step-counter);
  border: 2px solid var(--form-wizard-number-color);
  color: var(--form-wizard-number-color);
  border-radius: 50%;
  width: 35px;
  height: 35px;
  margin-right: 10px;
  text-align: center;
  line-height: 2;
  display: inline-block;
}

main .form form .wizard .wizard-menu-active-item::before{
  border: 2px solid var(--form-wizard-number-color);
  background: var(--form-wizard-number-color);
  color: var(--form-styles-background-color-primary);
  font-weight: 600;
}

@media (min-width: 600px) {
    main .form button {
        width: unset;
    }
}

/* wizard title on left */
main .form form .wizard.left{
  display: flex;
}

main .form form .wizard.left .wizard-menu-items{
  flex-direction: column;
  width: 300px;
}

main form .panel-wrapper {
  display: flex;
  padding: 0;
  flex-direction: column;
}

main .form form .panel-wrapper{
  display: grid;
  grid-template-columns: repeat(var(--form-columns), minmax(0, 1fr));
  gap: var(--form-field-vert-gap) var(--form-field-horz-gap);
}

main .form form .repeat-wrapper{
    display: grid;
    grid-template-columns: repeat(var(--form-columns), minmax(0, 1fr));
    gap: var(--form-field-vert-gap) var(--form-field-horz-gap);
}

main .get-a-quote-form-alternate form .panel-wrapper {
    gap:unset;
}

main .campaign-form.form form .panel-wrapper {
    padding: 5px;
    background-color: var(--color-gray);
    display: block;
}

main .get-a-quote-form-alternate.grey-background form .panel-wrapper{
    background-color: var(--color-gray);
}

main .form form .wizard.left .panel-wrapper{
  flex: 1;
}
/* ... */

